crates/bijux-planner-fastq/tests/snapshots/bijux-planner-fastq__contracts__fastq_plan_snapshot.snap
---
source: crates/bijux-planner-fastq/tests/plan_snapshots.rs
expression: plan
---
{
  "schema_version": "bijux.execution_graph.v1",
  "pipeline_id": "fastq-to-fastq__default__v1",
  "planner_version": "bijux-planner-fastq.v1",
  "policy": "prefer_accuracy",
  "steps": [
    {
      "step_id": "fastq.trim",
      "command": {
        "template": [
          "fastp"
        ]
      },
      "image": {
        "image": "bijux/fastp",
        "digest": "sha256:fastp"
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 2,
        "tmp_gb": 1,
        "threads": 2
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "trimmed_reads",
            "path": "out/trim/fastp/fastp.fastq.gz"
          }
        ]
      },
      "out_dir": "out/trim/fastp",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    },
    {
      "step_id": "fastq.validate_pre",
      "command": {
        "template": [
          "fastqvalidator"
        ]
      },
      "image": {
        "image": "bijux/fastqvalidator",
        "digest": "sha256:fastqvalidator"
      },
      "resources": {
        "runtime": "short",
        "mem_gb": 1,
        "tmp_gb": 1,
        "threads": 1
      },
      "io": {
        "inputs": [
          {
            "name": "reads_r1",
            "path": "reads_R1.fastq.gz"
          }
        ],
        "outputs": [
          {
            "name": "validation_report",
            "path": "out/validate_pre/fastqvalidator_official/validation.json"
          }
        ]
      },
      "out_dir": "out/validate_pre/fastqvalidator_official",
      "aux_images": {},
      "expected_artifact_ids": [],
      "metrics_schema_ids": []
    }
  ],
  "edges": [
    {
      "from": "fastq.validate_pre",
      "to": "fastq.trim"
    }
  ]
}
